Bug 169: Cambio z-index main.css para el menu flotante

--- a/siente/web/configuracion/zoom/resources/cssfonade/main.css
+++ b/siente/web/configuracion/zoom/resources/cssfonade/main.css
@@ -2561,7 +2561,7 @@ css usuario modificacion
     border-color: #6B6B6B;
     position: relative;
     top: 0px;
-    z-index: 1;
+    z-index: 1000;
     border-bottom: solid 1px #F2F2F2;
 }
 
